--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="col-md-2">
           <ul class="custom-menu">
             <li class="active"><a href="index.html">Trang chủ</a></li>
-            <li><a href="about.html">Cô giáo nhỏ của </a></li>
+            <li><a href="about.html">Cô giáo nhỏ của tôi</a></li>
             <li><a href="services.html">Công việc</a></li>
             
           </ul>
