--- a/services.html
+++ b/services.html
@@ -44,9 +44,9 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Trang chủ</a></li>
+            <li ><a href="index.html">Trang chủ</a></li>
             <li><a href="about.html">Cô giáo nhỏ của tôi</a></li>
-            <li><a href="services.html">Công việc</a></li>
+            <li class="active"><a href="services.html">Công việc</a></li>
             
           </ul>
         </div>
